src/core/jit/snapshots/gqlforge__core__jit__builder__tests__simple_mutation.snap
---
source: src/core/jit/builder.rs
expression: plan.selection
---
[
    Field {
        id: 0,
        name: "createUser",
        output_name: "createUser",
        ir: "Some(..)",
        type_of: User,
        type_condition: Some(
            "Mutation",
        ),
        args: [
            Arg {
                id: 0,
                name: "user",
                type_of: InputUser!,
                value: Some(
                    Object(
                        {
                            Name(
                                "id",
                            ): Number(
                                Number(101),
                            ),
                            Name(
                                "name",
                            ): String(
                                "Gqlforge",
                            ),
                            Name(
                                "email",
                            ): String(
                                "gqlforge@gqlforge.pages.dev",
                            ),
                            Name(
                                "phone",
                            ): String(
                                "2345234234",
                            ),
                            Name(
                                "username",
                            ): String(
                                "gqlforge",
                            ),
                            Name(
                                "website",
                            ): String(
                                "gqlforge.pages.dev",
                            ),
                        },
                    ),
                ),
                default_value: None,
            },
        ],
        selection: [
            Field {
                id: 1,
                name: "id",
                output_name: "id",
                type_of: ID!,
                type_condition: Some(
                    "User",
                ),
                directives: [],
            },
            Field {
                id: 2,
                name: "name",
                output_name: "name",
                type_of: String!,
                type_condition: Some(
                    "User",
                ),
                directives: [],
            },
            Field {
                id: 3,
                name: "email",
                output_name: "email",
                type_of: String!,
                type_condition: Some(
                    "User",
                ),
                directives: [],
            },
            Field {
                id: 4,
                name: "phone",
                output_name: "phone",
                type_of: String,
                type_condition: Some(
                    "User",
                ),
                directives: [],
            },
            Field {
                id: 5,
                name: "website",
                output_name: "website",
                type_of: String,
                type_condition: Some(
                    "User",
                ),
                directives: [],
            },
            Field {
                id: 6,
                name: "username",
                output_name: "username",
                type_of: String!,
                type_condition: Some(
                    "User",
                ),
                directives: [],
            },
        ],
        directives: [],
    },
]
